--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/account
 spring.datasource.username=salomao
 spring.datasource.password=minhasenha
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-
-
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
